2009-03-19  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberdctl.template: Allow more environment variable overrides
	in ejabberdctl (thanks to Brian Cully)(EJAB-891)

2009-03-10  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.4.txt: Added file for new release

	* src/tls/tls_drv.c: Fix encryption problem for ejabberd_http
	after timeout (thanks to Alexey Shchepin)(EJAB-880)

2009-03-10  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fix PEP with other domains and s2s
	(EJAB-825). Also fixes send last published items in subscription.

	* src/mod_pubsub/node_default.erl: minor typo fix

2009-03-09  Badlop  <badlop@process-one.net>

	* src/tls/tls_drv.c: Fix to support OpenSSL older than
	0.9.8f (EJAB-877)(thanks to Jonathan Schleifer)
	* doc/guide.tex: It is again supported OpenSSL older than 0.9.8f
	* doc/guide.html: Likewise

	* src/mod_proxy65/mod_proxy65_service.erl: if an ip option is not
	defined, the module takes an IP address of a local
	hostname (thanks to Evgeniy Khramtsov)

2009-03-07  Badlop  <badlop@process-one.net>

	* src/Makefile.in: In SunOS, use different C flags (thanks to
	Thomas)(EJAB-438)
	* src/ejabberd_zlib/Makefile.in: Likewise
	* src/mod_irc/Makefile.in: Likewise
	* src/stringprep/Makefile.in: Likewise
	* src/tls/Makefile.in: Likewise

	* src/ejabberd_c2s.erl: Enforce privacy rules also for
	subscription requests (EJAB-300)
	* src/ejabberd_sm.erl: Likewise

	* src/mod_privacy.erl: Temporary workaround to inconsistency
	* src/mod_privacy_odbc.erl: Likewise

2009-03-06  Badlop  <badlop@process-one.net>

	* src/eldap/eldap.erl: moves waiting for response queries to
	pending queue on an LDAP connection failure (thanks to Evgeniy
	Khramtsov)

	* src/eldap/eldap.erl: implemented queue for pending
	queries (thanks to Evgeniy Khramtsov)

	* src/eldap/eldap.erl: Close a connection on tcp_error (thanks to
	Evgeniy Khramtsov)

2009-03-05  Badlop  <badlop@process-one.net>
